@@ -1,3 +1,7 @@
+2013-02-11  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Adding a new implementation of NearestPointExtrapolator.
+
 2013-02-04  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Adding migration/testpdf.cc and corresponding README instructions.
